raw_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: k8s-basic-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-server
  type: ClusterIP
